# data_engineering_task_adtech_data_pipeline

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
dags/: generate_new_data.py  get_airflow_user.py  initial_load_generate_postgres_data.py  track_delta.py
init/: airflow_init  airflow_start_services.sh
scripts/: main.py  seed.py
